--- a/Homepg.html
+++ b/Homepg.html
@@ -11,22 +11,19 @@
             background-color: rgb(199, 245, 238);
         }
         .head{
-            background-color: aquamarine;
+            background-image: url(https://i.ytimg.com/vi/5BZLz21ZS_Y/maxresdefault.jpg);
             text-align: center;
             padding: 70px;
+            margin: 0px;
         }
         .head h1{
-            color: rgb(55, 180, 103);
+            color: rgb(0, 0, 0);
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             font-size: 100px;
-        }
-        .head p{
-            color: rgb(17, 163, 132);
-            font-size: 50px;
-            font-family: cursive;
+            text-shadow: 2px 2px 10px whitesmoke;
         }
         .menu{
-            background-color: beige;
+            background-color: rgb(0, 0, 0);
             overflow: hidden;
         }
         .menu a{
@@ -35,7 +32,8 @@
             padding: 20px 40px;
             text-decoration: none;
             transition: all 0.5s ease;
-            color: rgb(231, 140, 104);
+            color: goldenrod;
+            text-shadow: 2px 2px 10px gold;
             font-size: 40px;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
@@ -43,9 +41,10 @@
             background-color: rgb(159, 229, 145);
         }
         .head h4{
-            font-size: 50px;
-            text-align: center;
-            color: rgb(38, 0, 255);
+            font-size: 35px;
+            color: rgb(0, 0, 0);
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            text-shadow: 2px 2px 10px whitesmoke;
         }
     </style>
 </head>
@@ -54,14 +53,15 @@
         <h1>APE 100 WEBSITE</h1>
     </div>
     <div class="menu">
-        <a href="Triangle Area.html" target="_blank">Triangle Area</a>
-        <a href="7 Wastes of Lean.html" target="_blank">7 Wastes of Lean</a>
-        <a href="TPS 4 STEPs.html" target="_blank">TPS 4 STEPs</a>
-        <a href="SPEED AND FEEDRATE.html" target="_blank">Speed And Feedrate</a>
-        <a href="Crip.html" target="_blank">Crip</a>
+        <a href="Homepg.html" target="_blank">APE100</a>
+        <a href="APE112.html" target="_blank">APE112</a>
+        <a href="APE122.html" target="_blank">APE122</a>
+        <a href="MTH102.html" target="_blank">MTH102</a>
+        <a href="PHY104.html" target="_blank">PHY104</a>
+        <a href="PHY192.html" target="_blank">PHY192</a>
     </div>
     <div class="head h4">
-        <h4>Create by: Poramat Torntham</h4>
+        <h4>Create by: Poramat Torntham 63070504834</h4>
     </div>
 </body>
 </html>
