--- a/PHY192.html
+++ b/PHY192.html
@@ -47,7 +47,7 @@
         <h2 class="h2">การทดลองที่ 9 Earth's Magnetic Field (ทฤษฎี) [PHY 192]</h2>
         <iframe width="720" height="480" src="https://www.youtube.com/embed/UPopLPS6K-s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2 class="h2">การทดลองที่ 9 Earth's Magnetic Field (สาธิตการทดลอง) [PHY 192]</h2>
-        <iframe width="720" height="480" src="https://www.youtube.com/embed/0BVYXSloM9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="720" height="480" src="https://www.youtube.com/embed/d_YpCNBQ65Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2 class="h2">การทดลองที่ 10 Interference and Diffraction (ทฤษฎี) [PHY 192]</h2>
         <iframe width="720" height="480" src="https://www.youtube.com/embed/Dc3Gc1KGGlQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2 class="h2">การทดลองที่ 10 Interference and Diffraction (สาธิตการทดลอง) [PHY 192]</h2>
